--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #0c0c0c;
-  background-color: black;
+  background-color: white;
   overflow-x: hidden;
 }
 
